@@ -1,6 +1,7 @@
 /*
- * Copyright (c) 2022, Arm Limited. All rights reserved.
- * Copyright (c) 2023, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2025, Arm Limited. All rights reserved.
+ * Copyright (c) 2023, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2025, Rivos Inc. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -35,14 +36,15 @@ import jdk.test.lib.Utils;
  * @key randomness
  * @summary Auto-vectorization enhancement to support vector conditional move.
  * @library /test/lib /
- * @run driver compiler.c2.irTests.TestVectorConditionalMove
+ * @run driver compiler.c2.irTests.TestConditionalMove
  */
 
-public class TestVectorConditionalMove {
+public class TestConditionalMove {
     final private static int SIZE = 1024;
     private static final Random RANDOM = Utils.getRandomInstance();
 
     public static void main(String[] args) {
+        // Vectorizaion: +UseCMoveUnconditionally, +UseVectorCmov
         // Cross-product: +-AlignVector and +-UseCompactObjectHeaders
         TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
                                    "-XX:-UseCompactObjectHeaders", "-XX:-AlignVector");
@@ -52,6 +54,12 @@ public class TestVectorConditionalMove {
                                    "-XX:+UseCompactObjectHeaders", "-XX:-AlignVector");
         TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:+UseVectorCmov",
                                    "-XX:+UseCompactObjectHeaders", "-XX:+AlignVector");
+
+        // Scalar: +UseCMoveUnconditionally, -UseVectorCmov
+        TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:-UseVectorCmov",
+                                   "-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders");
+        TestFramework.runWithFlags("-XX:+UseCMoveUnconditionally", "-XX:-UseVectorCmov",
+                                   "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders");
     }
 
     // Compare 2 values, and pick one of them
@@ -564,6 +572,7 @@ public class TestVectorConditionalMove {
         return (a > b) ? c : d;
     }
 
+    // Double comparison
     private int cmoveDGTforI(double a, double b, int c, int d) {
         return (a > b) ? c : d;
     }
@@ -586,7 +595,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVFGT(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] > b[i]) ? a[i] : b[i];
@@ -598,7 +613,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVFGTSwap(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (b[i] > a[i]) ? a[i] : b[i];
@@ -610,7 +631,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVFLT(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] < b[i]) ? a[i] : b[i];
@@ -622,7 +649,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVFLTSwap(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (b[i] < a[i]) ? a[i] : b[i];
@@ -634,7 +667,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVFEQ(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] == b[i]) ? a[i] : b[i];
@@ -646,7 +685,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVDLE(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] <= b[i]) ? a[i] : b[i];
@@ -658,7 +703,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVDLESwap(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (b[i] <= a[i]) ? a[i] : b[i];
@@ -670,7 +721,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVDGE(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] >= b[i]) ? a[i] : b[i];
@@ -682,7 +739,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVDGESwap(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (b[i] >= a[i]) ? a[i] : b[i];
@@ -694,7 +757,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveVDNE(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] != b[i]) ? a[i] : b[i];
@@ -707,7 +776,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] > b[i]) ? 0.1f : -0.1f;
@@ -719,7 +794,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGEforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] >= b[i]) ? 0.1f : -0.1f;
@@ -731,7 +812,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFLTforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] < b[i]) ? 0.1f : -0.1f;
@@ -743,7 +830,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFLEforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] <= b[i]) ? 0.1f : -0.1f;
@@ -755,7 +848,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFEQforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] == b[i]) ? 0.1f : -0.1f;
@@ -767,7 +866,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFNEQforFConst(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] != b[i]) ? 0.1f : -0.1f;
@@ -779,8 +884,19 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfAnd = {"UseCompactObjectHeaders", "false", "UseVectorCmov", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+    @IR(counts = {IRNode.LOAD_VECTOR_F, ">0",
+                    IRNode.VECTOR_MASK_CMP_F, ">0",
+                    IRNode.VECTOR_BLEND_F, ">0",
+                    IRNode.STORE_VECTOR, ">0"},
+        applyIfAnd = {"AlignVector", "false", "UseVectorCmov", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFLTforFConstH2(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] < b[i+0]) ? 0.1f : -0.1f;
@@ -797,8 +913,19 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfAnd = {"UseCompactObjectHeaders", "false", "UseVectorCmov", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+    @IR(counts = {IRNode.LOAD_VECTOR_F, ">0",
+                    IRNode.VECTOR_MASK_CMP_F, ">0",
+                    IRNode.VECTOR_BLEND_F, ">0",
+                    IRNode.STORE_VECTOR, ">0"},
+        applyIfAnd = {"AlignVector", "false", "UseVectorCmov", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFLEforFConstH2(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <= b[i+0]) ? 0.1f : -0.1f;
@@ -815,7 +942,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, "=0",
                   IRNode.VECTOR_BLEND_F, "=0",
                   IRNode.STORE_VECTOR, "=0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFYYforFConstH2(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <= b[i+0]) ? 0.1f : -0.1f;
@@ -828,7 +961,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, "=0",
                   IRNode.VECTOR_BLEND_F, "=0",
                   IRNode.STORE_VECTOR, "=0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFXXforFConstH2(float[] a, float[] b, float[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <  b[i+0]) ? 0.1f : -0.1f;
@@ -841,7 +980,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGTforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] > b[i]) ? 0.1 : -0.1;
@@ -853,7 +998,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGEforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] >= b[i]) ? 0.1 : -0.1;
@@ -865,7 +1016,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDLTforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] < b[i]) ? 0.1 : -0.1;
@@ -877,7 +1034,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDLEforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] <= b[i]) ? 0.1 : -0.1;
@@ -889,7 +1052,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDEQforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] == b[i]) ? 0.1 : -0.1;
@@ -901,7 +1070,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDNEQforDConst(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i++) {
             c[i] = (a[i] != b[i]) ? 0.1 : -0.1;
@@ -913,7 +1088,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDLTforDConstH2(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] < b[i+0]) ? 0.1 : -0.1;
@@ -926,7 +1107,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDLEforDConstH2(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <= b[i+0]) ? 0.1 : -0.1;
@@ -939,7 +1126,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, "=0",
                   IRNode.VECTOR_BLEND_D, "=0",
                   IRNode.STORE_VECTOR, "=0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDYYforDConstH2(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <= b[i+0]) ? 0.1 : -0.1;
@@ -952,7 +1145,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, "=0",
                   IRNode.VECTOR_BLEND_D, "=0",
                   IRNode.STORE_VECTOR, "=0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDXXforDConstH2(double[] a, double[] b, double[] c) {
         for (int i = 0; i < a.length; i+=2) {
             c[i+0] = (a[i+0] <  b[i+0]) ? 0.1 : -0.1;
@@ -966,10 +1165,15 @@ public class TestVectorConditionalMove {
     //   do not float down into the branches, I compute a value, and store it to r2 (same as r, except that the
     //   compilation does not know that).
     //   So far, vectorization only works for CMoveF/D, with same data-width comparison (F/I for F, D/L for D).
+    //   TODO: enable CMOVE_I/L verification when it's guaranteed to generate CMOVE_I/L, JDK-8371984.
+    //
     // Signed comparison: I/L
     //     I fo I
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIEQforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -981,6 +1185,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveINEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -992,6 +1199,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGTforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1003,6 +1213,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1014,6 +1227,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILTforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1025,6 +1241,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1037,6 +1256,9 @@ public class TestVectorConditionalMove {
     //     I fo L
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIEQforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1048,6 +1270,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveINEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1059,6 +1284,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGTforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1070,6 +1298,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1081,6 +1312,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILTforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1092,6 +1326,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_I, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1108,7 +1345,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIEQforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1124,7 +1367,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveINEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1140,7 +1389,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGTforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1156,7 +1411,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1172,7 +1433,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILTforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1188,7 +1455,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1201,6 +1474,9 @@ public class TestVectorConditionalMove {
     //     I fo D
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIEQforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1212,6 +1488,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveINEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1223,6 +1502,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGTforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1234,6 +1516,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveIGEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1245,6 +1530,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILTforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1256,6 +1544,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_I, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveILEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1268,6 +1559,9 @@ public class TestVectorConditionalMove {
     //     L fo I
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLEQforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1279,6 +1573,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLNEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1290,6 +1587,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGTforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1301,6 +1601,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1312,6 +1615,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLTforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1323,6 +1629,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1335,6 +1644,9 @@ public class TestVectorConditionalMove {
     //     L fo L
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLEQforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1346,6 +1658,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLNEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1357,6 +1672,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGTforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1368,6 +1686,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1379,6 +1700,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLTforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1390,6 +1714,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_L, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1402,6 +1729,9 @@ public class TestVectorConditionalMove {
     //     L fo F
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLEQforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1413,6 +1743,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLNEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1424,6 +1757,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGTforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1435,6 +1771,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLGEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1446,6 +1785,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLTforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1457,6 +1799,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveLLEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1473,7 +1818,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLEQforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1490,7 +1841,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLNEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1507,7 +1864,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLGTforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1524,7 +1887,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLGEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1541,7 +1910,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLLTforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1558,7 +1933,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_L, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveLLEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -1573,6 +1954,9 @@ public class TestVectorConditionalMove {
     //     I fo I
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIEQforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1584,6 +1968,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUINEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1595,6 +1982,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGTforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1606,6 +1996,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1617,6 +2010,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILTforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1628,6 +2024,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILEforI(int[] a, int[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1640,6 +2039,9 @@ public class TestVectorConditionalMove {
     //     I fo L
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIEQforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1651,6 +2053,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUINEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1662,6 +2067,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGTforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1673,6 +2081,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1684,6 +2095,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILTforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1695,6 +2109,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_U, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILEforL(int[] a, int[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1711,7 +2128,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIEQforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1727,7 +2150,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUINEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1743,7 +2172,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGTforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1759,7 +2194,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1775,7 +2216,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILTforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1791,7 +2238,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_I, IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.VECTOR_BLEND_F,    IRNode.VECTOR_SIZE + "min(max_int, max_float)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+            applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILEforF(int[] a, int[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -1804,6 +2257,9 @@ public class TestVectorConditionalMove {
     //     I fo D
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIEQforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1815,6 +2271,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUINEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1826,6 +2285,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGTforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1837,6 +2299,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUIGEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1848,6 +2313,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILTforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1859,6 +2327,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_U, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveUILEforD(int[] a, int[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -1871,6 +2342,9 @@ public class TestVectorConditionalMove {
     //     L fo I
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULEQforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1882,6 +2356,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULNEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1893,6 +2370,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGTforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1904,6 +2384,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1915,6 +2398,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLTforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1926,6 +2412,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLEforI(long[] a, long[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -1938,6 +2427,9 @@ public class TestVectorConditionalMove {
     //     L fo L
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULEQforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1949,6 +2441,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULNEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1960,6 +2455,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGTforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1971,6 +2469,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1982,6 +2483,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLTforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -1993,6 +2497,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_UL, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLEforL(long[] a, long[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -2005,6 +2512,9 @@ public class TestVectorConditionalMove {
     //     L fo F
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULEQforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2016,6 +2526,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULNEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2027,6 +2540,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGTforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2038,6 +2554,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULGEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2049,6 +2568,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLTforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2060,6 +2582,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveULLEforF(long[] a, long[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2076,7 +2601,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULEQforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2093,7 +2624,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULNEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2110,7 +2647,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULGTforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2127,7 +2670,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULGEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2144,7 +2693,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULLTforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2161,7 +2716,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_L, IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.VECTOR_BLEND_D,    IRNode.VECTOR_SIZE + "min(max_long, max_double)", ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_UL, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     // Requires avx2, else L is restricted to 16 byte, and D has 32. That leads to a vector elements mismatch of 2 to 4.
     private static void testCMoveULLEforD(long[] a, long[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
@@ -2174,6 +2735,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_F, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforI(float[] a, float[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -2185,6 +2749,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_F, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforL(float[] a, float[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -2199,7 +2766,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforF(float[] a, float[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2211,6 +2784,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforD(float[] a, float[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -2222,6 +2798,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_I, ">0", IRNode.CMP_D, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGTforI(double[] a, double[] b, int[] c, int[] d, int[] r, int[] r2) {
         for (int i = 0; i < a.length; i++) {
             int cc = c[i];
@@ -2233,6 +2812,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    // @IR(counts = {IRNode.CMOVE_L, ">0", IRNode.CMP_D, ">0"},
+    //     applyIf = {"UseVectorCmov", "false"},
+    //     applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGTforL(double[] a, double[] b, long[] c, long[] d, long[] r, long[] r2) {
         for (int i = 0; i < a.length; i++) {
             long cc = c[i];
@@ -2244,6 +2826,9 @@ public class TestVectorConditionalMove {
 
     @Test
     @IR(failOn = {IRNode.STORE_VECTOR})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGTforF(double[] a, double[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
@@ -2258,7 +2843,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_D, ">0",
                   IRNode.VECTOR_BLEND_D, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_D, ">0", IRNode.CMP_D, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveDGTforD(double[] a, double[] b, double[] c, double[] d, double[] r, double[] r2) {
         for (int i = 0; i < a.length; i++) {
             double cc = c[i];
@@ -2274,7 +2865,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforFCmpCon1(float a, float[] b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < b.length; i++) {
             float cc = c[i];
@@ -2289,7 +2886,13 @@ public class TestVectorConditionalMove {
                   IRNode.VECTOR_MASK_CMP_F, ">0",
                   IRNode.VECTOR_BLEND_F, ">0",
                   IRNode.STORE_VECTOR, ">0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIf = {"UseVectorCmov", "true"})
+    @IR(failOn = {IRNode.STORE_VECTOR},
+        applyIf = {"UseVectorCmov", "false"})
+    @IR(counts = {IRNode.CMOVE_F, ">0", IRNode.CMP_F, ">0"},
+        applyIf = {"UseVectorCmov", "false"},
+        applyIfPlatform = {"riscv64", "true"})
     private static void testCMoveFGTforFCmpCon2(float[] a, float b, float[] c, float[] d, float[] r, float[] r2) {
         for (int i = 0; i < a.length; i++) {
             float cc = c[i];
